--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-Streamlit: 1.32.2
-newspaper3k: 0.2.8
-textblob: 0.18.0.post0
+pip install streamlit==1.32.2 newspaper3k==0.2.8 textblob==0.18.0.post0
+pip install lxml feedparser nltk
+
